--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -4,7 +4,7 @@
         
     </head>
     <body>
-        <h1>Welcome to Auth-App!</h1>
+        <h1>Welcome to Family History!</h1>
     </body>
 
 </html>
