--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        
+    <head>       
     </head>
     <body>
         <h1>Welcome to Family History!</h1>
-    </body>
-
+        <br>
+        <img src="../../resources/underconstruction.gif">
+    </body>   
 </html>
